Employee profile view - hide birth year

--- a/nicnbk-ui-angular2/src/app/hr/view/hr-employees-list.component.html
+++ b/nicnbk-ui-angular2/src/app/hr/view/hr-employees-list.component.html
@@ -74,7 +74,7 @@
                 <th>FIRSTNAME</th>
                 <th>DATE OF BIRTH</th>
                 <th>USERNAME</th>
-                <th>STATUS</th>
+                <th>SYSTEM STATUS</th>
             </tr>
             </thead>
 
@@ -82,7 +82,7 @@
             <tr *ngFor="let employee of searchResult?.employees"  style="cursor: pointer" (click)="navigate(employee.username)">
                 <td>{{employee.lastName}}</td>
                 <td>{{employee.firstName}}</td>
-                <td>{{employee.birthDate}}</td>
+                <td>{{getDateMonthTextDay(employee.birthDate)}}</td>
                 <td>{{employee.username}}</td>
                 <td>
                     <button *ngIf="employee.active == null || employee.active" disabled="true" class="btn btn-xs btn-success">ACTIVE</button>
