--- a/nicnbk-ui-angular2/src/app/employee/view/employee.profile.component.html
+++ b/nicnbk-ui-angular2/src/app/employee/view/employee.profile.component.html
@@ -75,7 +75,7 @@
                 <div class="row form-group">
                     <label class="control-label col-sm-2">Date of birth:</label>
                     <div class="col-sm-10">
-                        <span class="form-control-static">{{employee.birthDate}}</span>
+                        <span class="form-control-static">{{getDateMonthTextDay(employee.birthDate)}}</span>
                     </div>
                 </div>
                 <div class="row form-group">
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="row form-group">
-                    <label class="control-label col-sm-2">Status:</label>
+                    <label class="control-label col-sm-2">System Status:</label>
                     <div class="col-sm-10">
                         <button *ngIf="employee.active == null || employee.active" disabled="true" class="btn btn-xs btn-success">ACTIVE</button>
                         <button *ngIf="employee.active != null && !employee.active" disabled="true" class="btn btn-xs btn-default">IN-ACTIVE</button>
