1. employee role for Pak - admin 2. HR menu highlighting added when click on HR

--- a/nicnbk-ui-angular2/src/app/hr/view/hr-docs-list.component.html
+++ b/nicnbk-ui-angular2/src/app/hr/view/hr-docs-list.component.html
@@ -35,8 +35,8 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th>NAME</th>
-                    <th *ngIf="canEdit()">ACTIONS</th>
+                    <th width="90%">NAME</th>
+                    <th *ngIf="canEdit()" widht="10%">ACTIONS</th>
                 </tr>
             </thead>
             <tbody>
