--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-hedge-funds-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-hedge-funds-edit.component.html
@@ -306,7 +306,7 @@
                         <div class="row">
                             <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                 <tr style="background-color: #307240; color: white;" >
-                                    <td colspan="3">Top 5 Positive Contributors (%)</td>
+                                    <td colspan="3">Top Positive Contributors (%)</td>
                                 </tr>
                                 <tr style="font-weight: bolder; border-bottom:2pt solid black;">
                                     <td>Fund</td>
@@ -325,26 +325,26 @@
                                     <td>
                                         <input type="number" style="font-size: 10px" class="form-control" [(ngModel)]="item.ytd"/>
                                     </td>
-                                    <!--<td>-->
-                                        <!--<button type="button" class="btn btn-xs btn-danger" (click)="removeClassAPositiveContributor(item)">-->
-                                            <!--<span class="glyphicon glyphicon-trash"></span>-->
-                                        <!--</button>-->
-                                    <!--</td>-->
+                                    <td>
+                                        <button type="button" class="btn btn-xs btn-danger" (click)="removeClassAPositiveContributor(item)">
+                                            <span class="glyphicon glyphicon-trash"></span>
+                                        </button>
+                                    </td>
                                 </tr>
-                                <!--<tr>-->
-                                    <!--<td colspan="3">-->
-                                        <!--<button type="button" class="btn btn-xs btn-default pull-right" (click)="addClassAPositiveContributor()">-->
-                                            <!--<span class="glyphicon glyphicon-plus-sign"></span>-->
-                                        <!--</button>-->
-                                    <!--</td>-->
-                                <!--</tr>-->
+                                <tr>
+                                    <td colspan="3">
+                                        <button type="button" class="btn btn-xs btn-default pull-right" (click)="addClassAPositiveContributor()">
+                                            <span class="glyphicon glyphicon-plus-sign"></span>
+                                        </button>
+                                    </td>
+                                </tr>
 
                             </table>
                         </div>
                         <div class="row">
                             <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                 <tr style="background-color: #307240; color: white;" >
-                                    <td colspan="3">Top 5 Negative Contributors (%)</td>
+                                    <td colspan="3">Top Negative Contributors (%)</td>
                                 </tr>
                                 <tr style="font-weight: bolder; border-bottom:2pt solid black;">
                                     <td>Fund</td>
@@ -363,26 +363,26 @@
                                     <td>
                                         <input type="number" style="font-size: 10px" class="form-control" [(ngModel)]="item.ytd"/>
                                     </td>
-                                    <!--<td>-->
-                                        <!--<button type="button" class="btn btn-xs btn-danger" (click)="removeClassANegativeContributor(item)">-->
-                                            <!--<span class="glyphicon glyphicon-trash"></span>-->
-                                        <!--</button>-->
-                                    <!--</td>-->
+                                    <td>
+                                        <button type="button" class="btn btn-xs btn-danger" (click)="removeClassANegativeContributor(item)">
+                                            <span class="glyphicon glyphicon-trash"></span>
+                                        </button>
+                                    </td>
                                 </tr>
-                                <!--<tr>-->
-                                    <!--<td colspan="3">-->
-                                        <!--<button type="button" class="btn btn-xs btn-default pull-right" (click)="addClassANegativeContributor()">-->
-                                            <!--<span class="glyphicon glyphicon-plus-sign"></span>-->
-                                        <!--</button>-->
-                                    <!--</td>-->
-                                <!--</tr>-->
+                                <tr>
+                                    <td colspan="3">
+                                        <button type="button" class="btn btn-xs btn-default pull-right" (click)="addClassANegativeContributor()">
+                                            <span class="glyphicon glyphicon-plus-sign"></span>
+                                        </button>
+                                    </td>
+                                </tr>
 
                             </table>
                         </div>
                         <div class="row">
                             <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                 <tr style="background-color: #307240; color: white;" >
-                                    <td colspan="3">Top 10 Portfolio Fund Allocation</td>
+                                    <td colspan="3">Top Portfolio Fund Allocation</td>
                                 </tr>
                                 <tr style="font-weight: bolder; border-bottom:2pt solid black;">
                                     <td>Fund</td>
@@ -401,23 +401,23 @@
                                     <td>
                                         <input type="number" style="font-size: 10px" class="form-control" [(ngModel)]="item.allocation"/>
                                     </td>
-                                    <!--<td>-->
-                                        <!--<button type="button" class="btn btn-xs btn-danger" (click)="removeClassAFundAllocation(item)">-->
-                                            <!--<span class="glyphicon glyphicon-trash"></span>-->
-                                        <!--</button>-->
-                                    <!--</td>-->
+                                    <td>
+                                        <button type="button" class="btn btn-xs btn-danger" (click)="removeClassAFundAllocation(item)">
+                                            <span class="glyphicon glyphicon-trash"></span>
+                                        </button>
+                                    </td>
                                 </tr>
-                                <!--<tr>-->
-                                    <!--<td colspan="3">-->
-                                        <!--<button type="button" class="btn btn-xs btn-default pull-right" (click)="addClassAFundAllocation()">-->
-                                            <!--<span class="glyphicon glyphicon-plus-sign"></span>-->
-                                        <!--</button>-->
-                                    <!--</td>-->
-                                <!--</tr>-->
-
+                                <tr>
+                                    <td colspan="3">
+                                        <button type="button" class="btn btn-xs btn-default pull-right" (click)="addClassAFundAllocation()">
+                                            <span class="glyphicon glyphicon-plus-sign"></span>
+                                        </button>
+                                    </td>
+                                </tr>
                             </table>
                         </div>
                     </div>
+
                     <div class="col-md-1">
                         &nbsp;
                     </div>
