--- a/nicnbk-ui-angular2/public/css/common.css
+++ b/nicnbk-ui-angular2/public/css/common.css
@@ -673,3 +673,11 @@ h4 a:focus, h4 a:hover {
 .tableCellCenter {
     text-align: center;
 }
+
+.tableCellFontColorRed {
+    color: red;
+}
+
+.tableCellFontColorGreen {
+    color: green;
+}
