--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -640,6 +640,9 @@
 </div>
 
 <div class="copyrightText">&copy; National Investment Corporation NBK </div>
+<div style="text-align: center">
+    <a>v{{version}}</a>
+</div>
 <!--<div class="copyrightText">UNIC v.1.9.0 </div>-->
 <br/>
 </body>
