--- a/nicnbk-ui-angular2/src/app/reporting/view/nick.mf.input.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/nick.mf.input.nb.reporting.component.html
@@ -30,7 +30,7 @@
         </div>
         <div class="col-md-6">
             <div class="col-md-1 pull-right">
-                <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/TarragonGeneratedForm/', reportId]" [disabled]="!showNextButton() || !checkTotal()">NEXT</button>
+                <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/TarragonGeneratedForm/', reportId]" [disabled]="!showNextButton()">NEXT</button>
             </div>
         </div>
     </div>
@@ -126,7 +126,7 @@
             </div>
             <div class="col-md-6">
                 <div class="col-md-1 pull-right">
-                    <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/TarragonGeneratedForm/', reportId]" [disabled]="!showNextButton() || !checkTotal()">NEXT</button>
+                    <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/TarragonGeneratedForm/', reportId]" [disabled]="!showNextButton()">NEXT</button>
                 </div>
             </div>
         </div>
