--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -652,10 +652,10 @@
             <div class="modal-body">
                 <div *ngFor="let version of versionList">
                     <details>
-                        <summary style="color:blue; text-decoration: underline";>
-                            v{{version.version}}
+                        <summary style="color:blue; text-decoration: underline">
+                            v{{version.description[0]}}
                         </summary>
-                        {{version.description}}
+                        {{version.description[1]}}
                     </details>
                     <br/>
                 </div>
