--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -653,7 +653,7 @@
                 <div *ngFor="let version of versionList">
                     <details>
                         <summary style="color:blue; text-decoration: underline">
-                            v{{version.description[0]}}
+                            {{version.description[0]}}
                         </summary>
                         {{version.description[1]}}
                     </details>
