--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -641,7 +641,7 @@
 
 <div class="copyrightText">&copy; National Investment Corporation NBK </div>
 <div style="text-align: center">
-    <a data-toggle="modal" data-target="#version" style="cursor: pointer">v{{versionLatestVersion}}</a>
+    <a data-toggle="modal" data-target="#version" style="cursor: pointer">Version {{versionLatestVersion}}</a>
 </div>
 <div class="modal fade" id="version" role="dialog">
     <div class="modal-dialog" style="overflow-y: scroll; max-height:85%;  margin-top: 50px; margin-bottom:50px; width:65%;">
